--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
@@ -38,6 +39,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "request": "^2.81.0",
     "vue": "^2.4.2"
   }
 }
