--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "request": "^2.81.0",
+    "request": "2.79.0",
     "vue": "^2.4.2"
   }
 }
